@@ -55,8 +55,7 @@ class AppTest {
 
         var fields = Arrays.stream(component.getClass().getDeclaredFields())
                 .filter(f -> !Modifier.isStatic(f.getModifiers()))
-                .peek(f -> f.setAccessible(true))
-                .collect(Collectors.toList());
+                .peek(f -> f.setAccessible(true)).toList();
 
         for (var field: fields){
             var fieldValue = field.get(component);
